Change iframe to object for PDF embedding
Replaced iframe with object tag for PDF display.

--- a/index.html
+++ b/index.html
@@ -183,10 +183,12 @@
           <!-- Break out of Bulma container width -->
           <div class="full-bleed">
             <div class="pdf-frame pdf-frame--xl">
-              <iframe
-                src="assets/ATLIS-framework.pdf#view=FitH"
-                title="ATLIS framework figure"
-                loading="lazy"></iframe>
+              <object data="assets/ATLIS-framework.pdf#view=FitH" type="application/pdf" class="pdf-object">
+                <p style="padding:16px;">
+                  Your browser can’t display embedded PDFs.
+                  <a href="assets/ATLIS-framework.pdf" target="_blank" rel="noopener">Open the figure PDF</a>.
+                </p>
+              </object>
             </div>
           </div>
 
