--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
 
-            <p class="tag is-light is-medium mb-3">ICML Position Paper</p>
+            <p class="tag is-light is-medium mb-3">Transparent AI Paper</p>
 
             <h1 class="title is-2 publication-title">
               <span class="is-family-secondary" style="font-weight: 900;">ATLIS</span>:
