--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 
   <!-- Open Graph / social preview -->
-  <meta property="og:title" content="ATLIS: From Models to Systems — System-Centric Interpretability for Agentic AI" />
+  <meta property="og:title" content="Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability" />
   <meta property="og:description" content="ATLIS (Agentic Trajectory & Layered Interpretability Stack) is a system-centric interpretability framework for agentic AI systems." />
   <meta property="og:url" content="https://vectorinstitute.github.io/ATLIS/" />
   <meta property="og:type" content="website" />
