--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <meta name="description" content="ATLIS: Agentic Trajectory & Layered Interpretability Stack — a system-centric interpretability framework for agentic AI.">
+  <meta name="description" content="Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability">
   <meta name="keywords" content="ATLIS, interpretability, LLM agents, agentic systems, monitoring, mechanistic interpretability, multi-agent coordination">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
