--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <!-- Open Graph / social preview -->
   <meta property="og:title" content="Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability" />
-  <meta property="og:description" content="ATLIS (Agentic Trajectory & Layered Interpretability Stack) is a system-centric interpretability framework for agentic AI systems." />
+  <meta property="og:description" content="Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability" />
   <meta property="og:url" content="https://vectorinstitute.github.io/ATLIS/" />
   <meta property="og:type" content="website" />
   <meta property="og:image:width" content="1200" />
