Update booktitle in BibTeX entry to 'TBD'

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <pre><code>@inproceedings{atlis2026position,
   title     = {Position: As we move from models to systems, we need and should use the Agentic Trajectory and Layered Interpretability Stack (ATLIS)},
   author    = {Zhu, Judy and Gandhi, Dhari and Ramachandram, Dhanesh and Rezaie Mianroodi, Ahmad and Raza, Shaina and Kocak, Sedef Akinli},
-  booktitle = {International Conference on Machine Learning (ICML) Position Paper},
+  booktitle = {TBD},
   year      = {2026},
   note      = {Under review}
 }</code></pre>
