Update links and image sources for illustrative diagram

--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
 
           <div class="content has-text-centered">
             <figure class="img-frame">
-              <a href="assets/ICML%20Illustrative%20Example%20Diagram.pdf" target="_blank" rel="noopener" title="Open PDF in a new tab">
+              <a href="assets/Illustrative%20Example%20Diagram.pdf" target="_blank" rel="noopener" title="Open PDF in a new tab">
                 <img
-                  src="assets/ICML%20Illustrative%20Example%20Diagram_page-0001.jpg"
+                  src="assets/Illustrative%20Example%20Diagram_page-0001.jpg"
                   alt="Illustrative Case Study Diagram"
                   class="img-fill"
                   onerror="this.onerror=null; this.closest('figure').classList.add('img-error'); this.style.display='none';">
               </a>
               <div class="img-fallback">
-                Couldn’t load <code>assets/ICML%20Illustrative%20Example%20Diagram_page-0001.jpg</code>.
+                Couldn’t load <code>assets/Illustrative%20Example%20Diagram_page-0001.jpg</code>.
                 Check the filename in <code>/assets</code> (spaces + capitalization).
               </div>
             </figure>
 
             <p class="content has-text-justified mt-3">
               <b>Figure:</b> Illustrative example of using ATLIS for a clinical workflow.
-              <span class="nowrap"><a href="assets/ICML%20Illustrative%20Example%20Diagram.pdf" target="_blank" rel="noopener">Open PDF</a></span>
+              <span class="nowrap"><a href="assets/Illustrative%20Example%20Diagram.pdf" target="_blank" rel="noopener">Open PDF</a></span>
             </p>
           </div>
         </div>
