--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <title>ATLIS — From Models to Systems</title>
-  <meta name="description" content="Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability">
+  <meta name="description" content="Position: Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability">
   <meta name="keywords" content="ATLIS, interpretability, LLM agents, agentic systems, monitoring, mechanistic interpretability, multi-agent coordination">
 
   <!-- Open Graph -->
@@ -63,7 +63,7 @@
 
           <div class="paper-meta">
             <div><span class="k">Authors:</span>
-              Judy Zhu, Dhari Gandhi, Dhanesh Ramachandram, Ahmad Rezaie Mianroodi, Shaina Raza, Sedef Akinli Kocak
+              Judy Zhu, Dhari Gandhi, Ahmad Rezaie Mianroodi, Dhanesh Ramachandram, Shaina Raza, Sedef Akinli Kocak
             </div>
             <div><span class="k">Affiliation:</span> Vector Institute / (add your affiliations)</div>
           </div>
@@ -267,8 +267,8 @@
       <div class="wrap">
         <h2>BibTeX</h2>
         <pre class="bib" id="bibBlock"><code>@inproceedings{atlis2026position,
-  title     = {Position: As we move from models to systems, we need and should use the Agentic Trajectory and Layered Interpretability Stack (ATLIS)},
-  author    = {Zhu, Judy and Gandhi, Dhari and Ramachandram, Dhanesh and Rezaie Mianroodi, Ahmad and Raza, Shaina and Kocak, Sedef Akinli},
+  title     = {Position: Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability},
+  author    = {Zhu, Judy and Gandhi, Dhari and Rezaie Mianroodi, Ahmad and Ramachandram, Dhanesh and Raza, Shaina and Kocak, Sedef Akinli},
   booktitle = {TBD},
   year      = {2026},
   note      = {Under review}
