Update hero section title in index.html

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <div class="pill">Transparent AI Paper</div>
 
           <h1>
-            <span class="hero-accent">ATLIS</span>:
-            From Models to Systems — System-Centric Interpretability for Agentic AI
+            <span class="hero-accent">Position</span>:
+            Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability
           </h1>
 
           <div class="paper-meta">
