Update affiliation in index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div><span class="k">Authors:</span>
               Judy Zhu, Dhari Gandhi, Ahmad Rezaie Mianroodi, Dhanesh Ramachandram, Shaina Raza, Sedef Akinli Kocak
             </div>
-            <div><span class="k">Affiliation:</span> Vector Institute / (add your affiliations)</div>
+            <div><span class="k">Affiliation:</span> Vector Institute / Dalhousie University</div>
           </div>
 
           <div class="cta-row">
