Add brand logo link to header in index.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
   <header class="site-header" role="banner">
     <div class="wrap header-inner">
       <div class="brand">
-        <!-- Optional: add a logo in assets/ (or delete this img) -->
-        <!-- <img src="assets/VectorLogo_Black.png" alt="Vector Institute" style="height:52px;"> -->
+        <a class="brand-logo-link" href="https://vectorinstitute.ai" target="_blank" rel="noopener" aria-label="Vector Institute">
+          <img class="brand-logo" src="assets/VectorLogo_Black.png" alt="Vector Institute" />
+        </a>
+      
         <div class="brand-text">
           <div class="brand-title">ATLIS</div>
           <div class="brand-subtitle">System-Centric Interpretability for Agentic AI</div>
